--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -41,7 +41,7 @@
 
 	<!-- Header section  -->
 	<header class="header-section">
-		<a href="{% url 'homepage:index' %}" class="site-logo"><img src="/media/Logo/logo.png" alt="logo"></a>
+		<a href="{% url 'homepage:index' %}" class="site-logo"><img src="/media/Logo/crucru.png" style="height: 60px; width: 100px" alt="logo"></a>
 		<div class="header-controls">
 			<button class="nav-switch-btn"><i class="fa fa-bars"></i></button>
 			<button class="search-btn"><i class="fa fa-search"></i></button>
