--- a/client/templates/client/addphotos_website.html
+++ b/client/templates/client/addphotos_website.html
@@ -1,5 +1,7 @@
 {% extends 'client/base.html' %}
-{% block title %}<title>Clients</title>{% endblock %}
+{% load static %}
+{% block css %}<link rel="stylesheet" type="text/css" href="{% static 'client/modifying_photos_albums.css' %}">{% endblock %}
+{% block title %}<title>Add Photos to Homepage</title>{% endblock %}
 {% block optionalmenu %}
     <li>
         <a href="{% url 'client:add_photos_homepage' %}">
@@ -16,80 +18,9 @@
 {% endblock %}
 {% block body %}
     <style>
-        .container-add {
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            border: 1px solid antiquewhite;
-            height: 500px;
-            width: 350px;
-            background-color: #b8daff;
-            border-radius: 25px;
-        }
 
-        .container-photos {
-            padding-left: 45px;
-            padding-top: 55px;
-        }
-
-        input[type=text], input[type=email] {
-            width: 90%;
-            display: inline-block;
-            font-size: 14px;
-            font-weight: 500;
-            border-bottom: 1px solid #b2b2b2;
-            padding-bottom: 14px;
-            margin-bottom: 20px;
-            background: transparent;
-        }
-
-        textarea {
-            height: 165px;
-            min-height: 165px;
-            margin-bottom: 38px;
-        }
-
-        label {
-            margin-bottom: 15px;
-            padding-bottom: 15px;
-            text-transform: uppercase;
-        }
-
-        input select option {
-            height: 15px;
-        }
-
-        button#addphotos {
-            color: whitesmoke;
-            font-size: 15px;
-            text-align: center;
-            margin: auto;
-            cursor: pointer;
-        }
-
-        h3 {
-            text-transform: uppercase;
-            color: black;
-        }
-
-        a#goback {
-            margin-left: 20px;
-            background-color: red;
-        }
-
-        a#portfolio {
-            margin-right: 20px;
-            height: 30px;
-            background-color: red;
-        }
-        .top-container {
-            display: flex;
-            justify-content: space-between;
-
-        }
     </style>
-
+<div class="containerofall">
     <div class="container-add">
         <br>
         <div class="top-container">
@@ -130,4 +61,5 @@
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
