--- a/homepage/templates/homepage/base.html
+++ b/homepage/templates/homepage/base.html
@@ -24,6 +24,7 @@
     <!-- Custom CSS-->
     <link rel="stylesheet" type="text/css" href="{% static 'homepage/css/index.css' %}" />
     {% block customCSS %}<link rel="stylesheet" type="text/css" href="{% static 'homepage/css/styles.css' %}" />{% endblock %}
+    {% block priceTableCSS %}{% endblock %}
     <!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i&display=swap" rel="stylesheet">
 
