--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -104,11 +104,11 @@
                         <div class="intro-text">
                             <h2 style="padding-left: 5px; padding-right: 5px; font-size:38px;">My name is Roos Laurore.
                                 I’m a photographer</h2>
-                            <p>Born in the 90's, I am very passionated by everything related to art, music and
+                            <p>Born in the 90's, I am very passionate about everything related to art, music and
                                 photography. I spent 1 year in France doing photography and sharing with others in the
-                                field. I learnt how to use Photoshop and I'm really good at it. While in France, I
+                                field. I learned how to use Photoshop, and I'm really good at it. While in France, I
                                 landed my first wedding gig on a yatch. I am actually interested in computer science and
-                                long term investing. I'm planning to travel a little bit in the next years in Indonesia,
+                                long term investing. I'm planning to travel a little in the next years in Indonesia,
                                 Greece and China. Long term goal : Digital Nomad.</p>
                             <a href="{% url 'pf:index_portfolio' %}" class="sp-link">Take a look @my portfolio</a>
                         </div>
