--- a/templates/static_pages_and_forms/contact.html
+++ b/templates/static_pages_and_forms/contact.html
@@ -1,14 +1,14 @@
 {% extends 'homepage/base.html' %}
 {% block title %}Contact us{% endblock %}
 {% block body %}
-	<div class="clearfix"></div>
-	<!-- Header section end  -->
+    <div class="clearfix"></div>
+    <!-- Header section end  -->
 
-	<!-- Google Map 
-	<div class="map">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14376.077865872314!2d-73.879277264103!3d40.757667781624285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1546528920522" style="border:0" allowfullscreen></iframe>
-	</div>
-	Google Map end -->
+    <!-- Google Map
+    <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14376.077865872314!2d-73.879277264103!3d40.757667781624285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1546528920522" style="border:0" allowfullscreen></iframe>
+    </div>
+    Google Map end -->
     <style>
         input[type=text], input[type=email], textarea {
             width: 100%;
@@ -21,22 +21,23 @@
             padding-bottom: 14px;
             margin-bottom: 20px;
             background: transparent;
-            }
+        }
+
         textarea {
-                height: 165px;
-                min-height: 165px;
-                margin-bottom: 38px;
-            }
+            height: 165px;
+            min-height: 165px;
+            margin-bottom: 38px;
+        }
     </style>
 
-	<!-- Contact section  -->
-	<section class="contact-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-4">
-					<div class="contact-text">
-						<h3>GET IN TOUCH</h3>
-						<p>They say a picture is worth a thousand words.
+    <!-- Contact section  -->
+    <section class="contact-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="contact-text">
+                        <h3>GET IN TOUCH</h3>
+                        <p>They say a picture is worth a thousand words.
                             But I wonder, what else do “they” say?
                             In photography there is a reality so subtle that it becomes more real than reality.
                             Taking an image reveals how rich reality truly is.
@@ -44,49 +45,63 @@
                             What you have caught on film is captured forever…
                             It remembers little things, long after you have forgotten everything.
                         </p>
-						<ul>
-							<li>Florida, USA</li>
-							<li>Phone :</li>
-							<li>crueltouchphoto@gmail.com</li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-8">
-					<form action="" method="post">
-                       {% csrf_token %}
-                       {{ form }}
-                       <input class="btn btn-primary" type="submit" value="Submit" style="width: 100px">
-                    </form>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Contact section end  -->
+                        <ul>
+                            <li>Florida, USA</li>
+                            <li>Phone :</li>
+                            <li>crueltouchphoto@gmail.com</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-lg-8">
+                    <form action="" method="post">
+                        {% csrf_token %}
+                        {{ form }}
 
-	<!-- Instagram section -->
-	<div class="instagram-section">
-		<h6></h6>
-		<div id="instafeed" class="instagram-slider owl-carousel"></div>
-	</div>
+                        {% if messages %}
+                            {% for message in messages %}
+                                <div class="alert {% if message.tags %}alert-{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}danger{% else %}{{ message.tags }}{% endif %}{% endif %}"
+                                     role="alert">{{ message }}</div>
+                            {% endfor %}
+                        {% endif %}
+                        {% if form.errors %}
+                            {% for field, errors in form.errors.items %}
+                                {% for error in errors %}
+                                    <p style="color: darkred">{{ error }}</p>
+                                {% endfor %}
+                            {% endfor %}
+                        {% endif %}
+                        <input class="btn btn-primary" type="submit" value="Submit" style="width: 100px">
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Contact section end  -->
+
+    <!-- Instagram section -->
+    <div class="instagram-section">
+        <h6></h6>
+        <div id="instafeed" class="instagram-slider owl-carousel"></div>
+    </div>
 
     <script>
-						/* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
-		//We start indexing at one because CSRF_token is considered and input field
-		 */
+        /* Because i didnt set placeholder values in forms.py they will be set here using vanilla Javascript
+//We start indexing at one because CSRF_token is considered and input field
+*/
 
-		//Query All input fields
-		var form_fields = document.getElementsByTagName('input')
-		form_fields[1].placeholder='How do I call you ? ';
-		form_fields[2].placeholder='A valid email address, please... !';
-		form_fields[3].placeholder="What is the subject of your message... ?";
+        //Query All input fields
+        var form_fields = document.getElementsByTagName('input')
+        form_fields[1].placeholder = 'How do I call you ? ';
+        form_fields[2].placeholder = 'A valid email address, please... !';
+        form_fields[3].placeholder = "What is the subject of your message... ?";
 
         var form_field_text_area = document.getElementsByTagName('textarea')
-		form_field_text_area[0].placeholder="I'm listening... ";
+        form_field_text_area[0].placeholder = "I'm listening... ";
 
 
-		for (var field in form_fields){
-			form_fields[field].className += ' form-control'
-		}
-	</script>
+        for (var field in form_fields) {
+            form_fields[field].className += ' form-control'
+        }
+    </script>
 
 {% endblock %}
