--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -71,12 +71,12 @@
                 <a href="{% url 'client:bookme' %}">Book Me</a>
                 <ul class="sub-menu">
                     <li><a href="{% url 'client:bookme' %}">Book Me</a></li>
-                    <li><a href="{% url 'client:login' %}">Latest Promotions</a></li>
+                    <li><a href="{% url 'homepage:index' %}">Latest Promotions</a></li>
                 </ul>
             </li>
 
             <li>
-                <a href="{% url 'client:login' %}">Client Login</a>
+                <a href="#">Client Login</a>
                 <ul class="sub-menu">
                     <li><a href="{% url 'client:login' %}">View Your Images</a></li>
                     <li><a href="{% url 'client:register' %}">Registration</a></li>
