--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -118,7 +118,9 @@
                 <div class="col-md-6 order-2 order-md-1">
                     <div class="copyright">
                         Copyright &copy;<script>document.write(new Date().getFullYear());</script>
-                        All rights reserved | Roos Orlens Laurore
+                        All rights reserved | Roos Orlens Laurore | Made with <i class="fa fa-heart-o"
+                                                                               aria-hidden="true"></i> by <a
+                                href="https://adamspierredavid.com" target="_blank">APD</a>
                     </div>
                 </div>
             </div>
