basic admin dashboard

--- a/templates/client/owners_view/owner_help.html
+++ b/templates/client/owners_view/owner_help.html
@@ -1,4 +1,5 @@
 {% extends 'client/base.html' %}
+{% load static %}
 {% block title %}<title>Help</title>{% endblock %}
 {% block body %}
     <!-- General -->
@@ -406,7 +407,8 @@
                 <tbody>
                 <tr>
                     <td>
-                        Clicking on the submit button when booking gives a server error 500, but the booking is made anyway
+                        Clicking on the submit button when booking gives a server error 500, but the booking is made
+                        anyway
                     </td>
                 </tr>
                 </tbody>
