--- a/templates/homepage/base.html
+++ b/templates/homepage/base.html
@@ -80,7 +80,7 @@
                 <ul class="sub-menu">
                     <li><a href="{% url 'client:login' %}">View Your Images</a></li>
                     <li><a href="{% url 'client:register' %}">Registration</a></li>
-                    <li><a href="{% url 'client:owner' %}">Admin Login</a></li>
+                    <li><a href="{% url 'administration:login' %}">Admin Login</a></li>
                 </ul>
             </li>
         {% endblock %}
